--- a/twitch-chat-bot/package.json
+++ b/twitch-chat-bot/package.json
@@ -11,6 +11,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "tmi.js": "^1.8.5"
   },
   "devDependencies": {
