--- a/package.json
+++ b/package.json
@@ -1,6 +1,24 @@
 {
+  "name": "twitch-chatbot",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "tsc && node ./dist/app.js"
+  },
   "dependencies": {
-    "@types/express": "^4.17.17",
-    "express": "^4.18.2"
+    "axios": "^0.24.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "tmi.js": "^1.8.5"
+  },
+  "devDependencies": {
+    "@types/node": "^16.11.11",
+    "eslint": "^8.4.0",
+    "source-map-support": "^0.5.21",
+    "typescript": "^4.5.2"
   }
 }
